# Wildberries

HW_MATH_1/: MATH_1.ipynb
HW_PYTHON_1/: #pyproject.toml#  HW_Python_1.ipynb
HW_PYTHON_2/: NumPy_2 (2).ipynb  NumPy_2(3).ipynb  NumPy_2.ipynb  PYTHON_2.ipynb
HW_PYTHON_3/: Python_3.ipynb
HW_SQL_1/: 3.sql  4.sql  5.sql  6.sql
HW_SQL_3/: SQL_3.sql
HW_SQL_4/: H:w 4 _ 1.sql  H:w 4 _ 2.sql  H:w 4 _ 3.sql  H:w 4 _ 4.sql  H:w 4 _ 5.sql
WB_HW_1/: pyproject.toml
