[tool.poetry]
name = "my-first-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
numpy = "^1.26.0"
pandas = "^2.1.1"
notebook = "^7.0.5"
jupyterlab = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
